__7.3.0 (SNAPSHOT)__

- added way to find `PreprocessorExtension` and `SpecialVariableProcessor` among Java services
- refactoring of API for `SpecialVariableProcessor` and `CommentTextProcessor`
- replaced single string property `actionPreprocessorExtension` by string list `actionPreprocessorExtensions` to provide way for many preprocessor extensions.
- internal refactoring

__7.2.1 (21-jul-2025)__

- refactoring of CommentTextProcessor call
- refactoring

__7.2.0 (13-jul-2025)__

- minimum JDK version 11
- added support for external processors calls during uncommenting actions `//$` and `//$$`, processors can be provided as services
- removed support of Gradle 5
- updated dependencies

__7.1.2 (08-jun-2024)__

- added way to define a preprocessor extension class through CLI (as `/EA:<class.name>`) and in plugins (as `actionPreprocessorExtension`). The class should be provided in the clas path.[#48](https://github.com/raydac/java-comment-preprocessor/issues/48)
- updated some dependencies

__7.1.1 (13-jan-2024)__

- fixed NPE for empty or null global variable value in Maven and Gradle [#47](https://github.com/raydac/java-comment-preprocessor/issues/47)
- updated dependencies

__7.1.0 (10-dec-2023)__

- refactoring of internal API
- updated dependencies
- improved keep comments processing, added `/M:<type>` CLI option [#46](https://github.com/raydac/java-comment-preprocessor/issues/46)

__7.0.5 (11-dec-2021)__

 - fixed compatibility with Gradle 7.x
 - added support of build under JDK 16
 - updated dependencies

7.0.4 (26-sep-2020)
 - fixed default flag state `keep comments` for start in CLI mode [#24](https://github.com/raydac/java-comment-preprocessor/issues/24)
 - fixed working directory detection in CLI mode

7.0.3 (13-sep-2020)
 - added way to get info about all input and produced files from preprocessor context