@@ -57,11 +57,11 @@ public class PrefixDirectiveHandler extends AbstractDirectiveHandler {
     if (!string.isEmpty()) {
       switch (string.charAt(0)) {
         case '+': {
-          state.setPrinter(PreprocessingState.PrinterType.PREFIX);
+          state.selectPrinter(PreprocessingState.PrinterType.PREFIX);
         }
         break;
         case '-': {
-          state.setPrinter(PreprocessingState.PrinterType.NORMAL);
+          state.selectPrinter(PreprocessingState.PrinterType.NORMAL);
         }
         break;
         default: {
