@@ -1,5 +1,6 @@
 __7.3.0 (SNAPSHOT)__
 
+- added way to manipulate current JCP text buffers as string variables: `jcp.text.buffer.all`,`jcp.text.buffer.middle`,`jcp.text.buffer.prefix` and `jcp.text.buffer.postfix`
 - added way to find `PreprocessorExtension` and `SpecialVariableProcessor` among Java services
 - refactoring of API for `SpecialVariableProcessor` and `CommentTextProcessor`
 - replaced single string property `actionPreprocessorExtension` by string list `actionPreprocessorExtensions` to provide way for many preprocessor extensions.
